syntax = "proto3";

package chunwei.protos.order;

option java_multiple_files = true;
option java_package = "com.chunwei.protos.order";
option java_outer_classname = "OrderProto";

service Order {
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
}

message PlaceOrderRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
  int32 total_price = 4;
}

message PlaceOrderResponse {
  bool success = 1;
  string order_id = 2;
}
